--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,4 @@
 {
   "presets": ["es2015"],
-  "ignore": ["external/**/*"],
-
-  "env": {
-    "cjs": {
-      "plugins": ["add-module-exports"]
-    }
-  }
+  "ignore": ["external/**/*"]
 }
