--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: node_js
 node_js:
   - "6.9"
-sudo: required
 cache:
-  yarn: true
   directories:
     - node_modules
-before_script:
-  - node node_modules/phantomjs-prebuilt/install.js
 script:
-  - yarn run ami
+  - npm run ami
 notifications:
   slack: fnndsc:UohaXDsjFDVqZj5IfdC88XRa
