--- a/package.json
+++ b/package.json
@@ -1,7 +1,109 @@
 {
-  "name": "ami.js",
-  "version": "0.0.16-dev",
-  "main": "lib/ami.js",
+  "_args": [
+    [
+      {
+        "raw": "ami.js@^0.0.15",
+        "scope": null,
+        "escapedName": "ami.js",
+        "name": "ami.js",
+        "rawSpec": "^0.0.15",
+        "spec": ">=0.0.15 <0.0.16",
+        "type": "range"
+      },
+      "D:\\three\\ami-starter"
+    ]
+  ],
+  "_from": "ami.js@>=0.0.15 <0.0.16",
+  "_id": "ami.js@0.0.15",
+  "_inCache": true,
+  "_location": "/ami.js",
+  "_nodeVersion": "6.9.0",
+  "_npmOperationalInternal": {
+    "host": "packages-18-east.internal.npmjs.com",
+    "tmp": "tmp/ami.js-0.0.15.tgz_1486026001130_0.9351562657393515"
+  },
+  "_npmUser": {
+    "name": "nicolasrannou",
+    "email": "nicolas@eunate.ch"
+  },
+  "_npmVersion": "3.10.8",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "ami.js@^0.0.15",
+    "scope": null,
+    "escapedName": "ami.js",
+    "name": "ami.js",
+    "rawSpec": "^0.0.15",
+    "spec": ">=0.0.15 <0.0.16",
+    "type": "range"
+  },
+  "_requiredBy": [
+    "#DEV:/",
+    "#USER"
+  ],
+  "_resolved": "https://registry.npmjs.org/ami.js/-/ami.js-0.0.15.tgz",
+  "_shasum": "a8d388e206b4611b04875728a3b9ba41ba2970cf",
+  "_shrinkwrap": null,
+  "_spec": "ami.js@^0.0.15",
+  "_where": "D:\\three\\ami-starter",
+  "author": {
+    "name": "Nicolas Rannou",
+    "email": "nicolas@eunate.ch",
+    "url": "https://eunate.ch"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
+  },
+  "config": {
+    "threeVersion": "r83",
+    "amiCDN": "https://cdnjs.cloudflare.com/ajax/libs/ami.js/",
+    "gaKey": "UA-39303022-3",
+    "transforms": "-t [babelify --presets [ es2015 ] ]"
+  },
+  "dependencies": {
+    "dicom-parser": "1.7.5",
+    "image-JPEG2000": "github:ohif/image-JPEG2000#master",
+    "jpeg-lossless-decoder-js": "1.2.3",
+    "math-float32-to-binary-string": "^1.0.0",
+    "nifti-reader-js": "v0.5.3",
+    "nrrd-js": "^0.2.1",
+    "pako": "1.0.1"
+  },
+  "description": "<p align=\"center\">   <img src=\"https://cloud.githubusercontent.com/assets/214063/19763517/a83873fc-9c3e-11e6-8390-229d7749246e.png\" width=\"60%\"> </p>",
+  "devDependencies": {
+    "babel-cli": "latest",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babelify": "7.3.0",
+    "browserify": "^13.1.0",
+    "eslint": "latest",
+    "eslint-config-google": "latest",
+    "gh-pages": "latest",
+    "glslify": "5.1.0",
+    "jasmine-core": "latest",
+    "jsdoc": "github:jsdoc3/jsdoc#master",
+    "karma": "latest",
+    "karma-browserify": "latest",
+    "karma-jasmine": "latest",
+    "karma-phantomjs-launcher": "latest",
+    "karma-spec-reporter": "latest",
+    "live-server": "^1.1.0",
+    "phantomjs": "latest",
+    "shelljs": "latest",
+    "uglify-js": "^2.7.3",
+    "watchify": "3.7.0"
+  },
+  "directories": {},
+  "dist": {
+    "shasum": "a8d388e206b4611b04875728a3b9ba41ba2970cf",
+    "tarball": "https://registry.npmjs.org/ami.js/-/ami.js-0.0.15.tgz"
+  },
+  "engines": {
+    "node": ">=6.9.0"
+  },
+  "gitHead": "5209426af473c2a1f3c95d6bdc857eaab5023d08",
   "keywords": [
     "ami",
     "ami.js",
@@ -18,84 +120,38 @@
     "stl",
     "trk"
   ],
-  "author": {
-    "name": "Nicolas Rannou",
-    "email": "nicolas@eunate.ch",
-    "url": "https://eunate.ch"
-  },
   "license": "Apache-2.0",
+  "main": "src/ami.js",
+  "maintainers": [
+    {
+      "name": "nicolasrannou",
+      "email": "nicolas@eunate.ch"
+    }
+  ],
+  "name": "ami.js",
+  "optionalDependencies": {},
+  "readme": "ERROR: No README data found!",
   "repository": {
     "type": "git",
     "url": "https://fnndsc.github.io/ami"
   },
-  "config": {
-    "threeVersion": "86",
-    "amiCDN": "https://cdnjs.cloudflare.com/ajax/libs/ami.js/",
-    "gaKey": "UA-39303022-3",
-    "transforms": "-t [babelify --presets [ es2015 ] ]"
-  },
-  "dependencies": {
-    "dicom-parser": "1.7.3",
-    "image-JPEG2000": "OHIF/image-JPEG2000#master",
-    "jpeg-lossless-decoder-js": "1.2.3",
-    "math-float32-to-binary-string": "^1.0.0",
-    "nifti-reader-js": "v0.5.3",
-    "nrrd-js": "^0.2.1",
-    "pako": "1.0.1"
-  },
   "scripts": {
-    "dist:prepare": "node ./scripts/$npm_package_config_mode.js --dist",
-    "dist:watchAmi": "watchify -d src/ami $npm_package_config_transforms --standalone AMI -o dist/build/ami.js -v",
-    "dist:watch": "watchify $npm_package_config_target -d $npm_package_config_transforms -o dist/$npm_package_config_target -v",
+    "ami": "npm run lint && npm run demo && npm run build:ami && npm run test",
+    "build": "npm run clean && cp index.html dist/index.html && npm run build:examples && npm run doc",
+    "build:ami": "browserify src/ami.js -d -v $npm_package_config_transforms --standalone AMI > build/ami.js && uglifyjs build/ami.js -o build/ami.min.js",
+    "build:examples": "npm run dist:prepare --ami.js:mode=examples && find examples -name '*.js' -print0 | xargs -0 -n1 -I{} bash -c \"echo Building {}; browserify {} -d -v $npm_package_config_transforms > dist/{} \"",
+    "clean": "rm -rf dist/*",
+    "demo": "node ./scripts/lessons.js --demo",
+    "deploy": "npm run build && gh-pages -d dist",
     "dist": "npm run dist:prepare --ami.js:mode=$npm_package_config_mode && (live-server dist --open=$npm_package_config_open & npm run dist:watch --ami.js:target=$npm_package_config_target)",
+    "dist:prepare": "node ./scripts/$npm_package_config_mode.js --dist",
+    "dist:watch": "watchify $npm_package_config_target -d $npm_package_config_transforms -o dist/$npm_package_config_target -v",
+    "dist:watchAmi": "watchify -d src/ami $npm_package_config_transforms --standalone AMI -o dist/build/ami.js -v",
+    "doc": "jsdoc -p -r -R README.md -c jsdoc.conf -d dist/doc src",
     "example": "npm run clean && node ./scripts/router.js examples ",
     "lesson": "npm run clean && mkdir dist/build && touch dist/build/ami.js && node ./scripts/router.js lessons ",
-    "demo": "node ./scripts/lessons.js --demo",
     "lint": "eslint **/*.js --quiet",
-    "build:examples": "npm run dist:prepare --ami.js:mode=examples && find examples -name '*.js' -print0 | xargs -0 -n1 -I{} bash -c \"echo Building {}; browserify {} -d -v $npm_package_config_transforms > dist/{} \"",
-    "build:ami": "browserify src/ami.js -d -v $npm_package_config_transforms --standalone AMI > build/ami.js && uglifyjs build/ami.js -o build/ami.min.js",
-    "build": "npm run clean && cp index.html dist/index.html && npm run build:examples && npm run doc",
-    "build-cjs": "rimraf lib && cross-env BABEL_ENV=cjs babel ./src -d lib",
-    "clean": "rimraf -rf dist/*",
-    "test": "karma start",
-    "doc": "jsdoc -p -r -R README.md -c jsdoc.conf -d dist/doc src",
-    "ami": "npm run lint && npm run demo && npm run build:ami && npm run test",
-    "deploy": "npm run build && gh-pages -d dist"
+    "test": "karma start"
   },
-  "devDependencies": {
-    "babel-cli": "latest",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babelify": "7.3.0",
-    "browserify": "^13.1.0",
-    "cross-env": "^3.2.3",
-    "eslint": "latest",
-    "eslint-config-google": "latest",
-    "gh-pages": "latest",
-    "glslify": "5.1.0",
-    "jasmine-core": "latest",
-    "jsdoc": "jsdoc3/jsdoc#master",
-    "karma": "latest",
-    "karma-browserify": "latest",
-    "karma-jasmine": "latest",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-sinon": "^1.0.5",
-    "karma-spec-reporter": "latest",
-    "live-server": "^1.1.0",
-    "phantomjs-prebuilt": "2.1.14",
-    "rimraf": "^2.6.1",
-    "shelljs": "latest",
-    "sinon": "^2.0.0",
-    "uglify-js": "^2.7.3",
-    "watchify": "3.7.0"
-  },
-  "engines": {
-    "node": ">=6.9.0"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
-  }
+  "version": "0.0.15"
 }
